# mobisoft-programming-blogs-examples

./: .gitignore  README.md
mobile/LocalAIStudio/: README.md
mobile/LocalAIStudio/LocalAIStudio/: ContentView.swift  LocalAIManager.swift  LocalAIStudioApp.swift
mobile/LocalAIStudio/LocalAIStudio.xcodeproj/: project.pbxproj
mobile/LocalAIStudio/LocalAIStudio/Enums/: CreativeType.swift
mobile/LocalAIStudio/LocalAIStudio/Models/: ContentClassification.swift  ExtractedEntities.swift  TaskSuggestion.swift
mobile/LocalAIStudio/LocalAIStudio/Views/: CategorizationResultsView.swift  ClassificationView.swift  EntitiesView.swift  ErrorCardView.swift  FeatureCardView.swift  OutputCardView.swift  TaskSuggestionsView.swift
mobile/biometrics_poc/: README.md  pubspec.yaml
mobile/biometrics_poc/android/app/: build.gradle.kts
mobile/biometrics_poc/ios/Runner/: Info.plist
mobile/biometrics_poc/ios/Runner.xcodeproj/: project.pbxproj
mobile/biometrics_poc/lib/: main.dart
mobile/biometrics_poc/test/: widget_test.dart
python/maven-vulnerability-scanner/: .env.example  .gitignore  README.md  lightllm_maven_scanner.py  requirements.txt  sample-pom.xml  server.py
python/mcp-code-reviewer/: .gitignore  README.md  checklist_engine.py  main.py  pyproject.toml  technology_detector.py  test_tools.py
python/mcp-code-reviewer/checklists/: java.yaml  javascript.yaml  python.yaml
python/mcp-code-reviewer/reporters/: __init__.py  progress_tracker.py
python/mcp-code-reviewer/validators/: __init__.py  base_validator.py  file_validator.py  pattern_validator.py
(+4 files in other folders)
